# pr2-litterbox-scooping

./: .cproject  .project  .pydevproject  CMakeLists.txt  colors.txt  colors_robot.txt  colors_simulation.txt  insert_object_run.sh  load_box.sh  load_models.sh  mainpage.dox  manifest.xml  observable_volume_run.sh  readme.txt  remove_box.sh  remove_object_run.sh  setup_env.sh
action/: InsertScooper.action  MoveToPosition.action
launch/: action_nodes.launch  all.launch  arm_navigation.launch  arm_navigation_slam.launch  convert_bag_to_images.launch  empty_world_paused.launch  experiment_deps.launch  insert_object_collision_node.launch  insert_object_custom_octomap.launch  insert_object_voxel_grid.launch  load_objects.launch  mapping_server.launch  measure_volume_collision_node.launch  observable_volume.launch  octomap_sources.launch  octomap_updater.launch  pixel_occupied.launch  pr2_empty_world.launch  remove_object_collision_node.launch  remove_object_custom_octomap.launch  remove_object_voxel_grid.launch  sensor_nodes.launch  sensors_only.launch
msg/: .gitignore  CleanLitterboxAction.msg  CleanLitterboxActionFeedback.msg  CleanLitterboxActionGoal.msg  CleanLitterboxActionResult.msg  CleanLitterboxGoal.msg  DumpPoopAction.msg  DumpPoopActionFeedback.msg  DumpPoopActionGoal.msg  DumpPoopActionResult.msg  FaceTargetAction.msg  FaceTargetActionFeedback.msg  FaceTargetActionGoal.msg  FaceTargetActionResult.msg  InsertScooperAction.msg  InsertScooperActionFeedback.msg  InsertScooperActionGoal.msg  InsertScooperActionResult.msg  InsertScooperResult.msg  MoveToLitterboxAction.msg  MoveToLitterboxActionFeedback.msg  MoveToLitterboxActionGoal.msg  MoveToLitterboxActionResult.msg  MoveToLitterboxFeedback.msg  MoveToPositionAction.msg  MoveToPositionActionFeedback.msg  MoveToPositionActionGoal.msg  MoveToPositionActionResult.msg  MoveToPositionGoal.msg  ScoopLitterboxAction.msg  ScoopLitterboxActionFeedback.msg  ScoopLitterboxActionGoal.msg  ScoopLitterboxActionResult.msg  ScoopLitterboxGoal.msg  ScooperAttached.msg
objects/: box.model  litterbox.model  scooper.model  trashcan.model
rviz_configs/: arm_move.vcg  (+4 more)
(+85 files in other folders)
